--- a/src/components/home/home.styles.scss
+++ b/src/components/home/home.styles.scss
@@ -31,6 +31,7 @@
 @media screen and (max-width: 1023px) {
   .homepage-container {
     width: 100%;
+    height: 50vh;
     padding: 0;
     margin: 0;
     display: flex;
