--- a/src/components/home/home.styles.scss
+++ b/src/components/home/home.styles.scss
@@ -82,6 +82,7 @@
     .homepage-info-container {
       position: relative;
       width: 100%;
+      height: 450px;
       .homepage-image {
         position: absolute;
         background-color: white;
