--- a/src/components/about/about.styles.scss
+++ b/src/components/about/about.styles.scss
@@ -1,6 +1,6 @@
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 1023px) {
   .aboutpage-top-container {
-    min-height: 100vh;
+    height: 480px;
     width: 100%;
     display: flex;
     align-items: center;
@@ -108,7 +108,7 @@
     }
   }
 }
-@media screen and (min-width: 651px) {
+@media screen and (min-width: 1024px) {
   .aboutpage-top-container {
     min-height: 100vh;
     width: 100%;
