--- a/src/components/contact/contact.styles.scss
+++ b/src/components/contact/contact.styles.scss
@@ -1,6 +1,6 @@
-@media screen and (max-width: 899px) {
+@media screen and (max-width: 1023px) {
   .contact-container {
-    min-height: 100vh;
+    height: 600px;
     width: 100%;
     display: flex;
     align-items: center;
@@ -94,7 +94,7 @@
     }
   }
 }
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 1024px) {
   .contact-container {
     min-height: 100vh;
     width: 100%;
