--- a/src/components/about/about.styles.scss
+++ b/src/components/about/about.styles.scss
@@ -15,14 +15,14 @@
       align-items: center;
       color: #303030;
       .aboutpage-welcome-message {
-        font-size: 24px;
+        font-size: 1.4rem;
         font-weight: 500;
 
         margin-bottom: 20px;
       }
       .aboutpage-content-message {
         width: 80%;
-        font-size: 20px;
+        font-size: 1.2rem;
         font-weight: 400;
         text-align: center;
       }
@@ -126,14 +126,14 @@
       align-items: center;
       color: #303030;
       .aboutpage-welcome-message {
-        font-size: 24px;
+        font-size: 1.4rem;
         font-weight: 500;
 
         margin-bottom: 20px;
       }
       .aboutpage-content-message {
         width: 80%;
-        font-size: 20px;
+        font-size: 1.2rem;
         font-weight: 400;
         text-align: center;
       }
